// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scopes.ts can add scope "data" 1`] = `
[MockFunction] {
  "calls": [
    [
      ".luucy/types.d.ts",
      "// enabled declarations, generated by luucy cli
// autogenerated. changes will be overwritten

/// <reference no-default-lib="true"/>
/// <reference path="../node_modules/luucy-types/globals/index.d.ts" />

/// <reference path="../node_modules/luucy-types/scopes/core/index.d.ts" />",
    ],
    [
      "package.json",
      "{
	"scopes": [
		"core",
		"data"
	]
}",
    ],
    [
      ".luucy/types.d.ts",
      "// enabled declarations, generated by luucy cli
// autogenerated. changes will be overwritten

/// <reference no-default-lib="true"/>
/// <reference path="../node_modules/luucy-types/globals/index.d.ts" />

/// <reference path="../node_modules/luucy-types/scopes/core/index.d.ts" />
/// <reference path="../node_modules/luucy-types/scopes/data/index.d.ts" />",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": true,
    },
    {
      "type": "return",
      "value": true,
    },
    {
      "type": "return",
      "value": true,
    },
  ],
}
`;

exports[`scopes.ts can add scope "data" to empty 1`] = `
[MockFunction] {
  "calls": [
    [
      ".luucy/types.d.ts",
      "// enabled declarations, generated by luucy cli
// autogenerated. changes will be overwritten

/// <reference no-default-lib="true"/>
/// <reference path="../node_modules/luucy-types/globals/index.d.ts" />
",
    ],
    [
      "package.json",
      "{
	"scopes": [
		"data"
	]
}",
    ],
    [
      ".luucy/types.d.ts",
      "// enabled declarations, generated by luucy cli
// autogenerated. changes will be overwritten

/// <reference no-default-lib="true"/>
/// <reference path="../node_modules/luucy-types/globals/index.d.ts" />

/// <reference path="../node_modules/luucy-types/scopes/data/index.d.ts" />",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": true,
    },
    {
      "type": "return",
      "value": true,
    },
    {
      "type": "return",
      "value": true,
    },
  ],
}
`;

exports[`scopes.ts can add scope "data" with dependency "core" 1`] = `
[MockFunction] {
  "calls": [
    [
      ".luucy/types.d.ts",
      "// enabled declarations, generated by luucy cli
// autogenerated. changes will be overwritten

/// <reference no-default-lib="true"/>
/// <reference path="../node_modules/luucy-types/globals/index.d.ts" />
",
    ],
    [
      "package.json",
      "{
	"scopes": [
		"core",
		"data"
	]
}",
    ],
    [
      ".luucy/types.d.ts",
      "// enabled declarations, generated by luucy cli
// autogenerated. changes will be overwritten

/// <reference no-default-lib="true"/>
/// <reference path="../node_modules/luucy-types/globals/index.d.ts" />

/// <reference path="../node_modules/luucy-types/scopes/core/index.d.ts" />
/// <reference path="../node_modules/luucy-types/scopes/data/index.d.ts" />",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": true,
    },
    {
      "type": "return",
      "value": true,
    },
    {
      "type": "return",
      "value": true,
    },
  ],
}
`;

exports[`scopes.ts can build managedTypes for given scopes 1`] = `
[MockFunction] {
  "calls": [
    [
      ".luucy/types.d.ts",
      "// enabled declarations, generated by luucy cli
// autogenerated. changes will be overwritten

/// <reference no-default-lib="true"/>
/// <reference path="../node_modules/luucy-types/globals/index.d.ts" />

/// <reference path="../node_modules/luucy-types/scopes/core/index.d.ts" />
/// <reference path="../node_modules/luucy-types/scopes/data/index.d.ts" />",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`scopes.ts can build when scopes are missing 1`] = `
[MockFunction] {
  "calls": [
    [
      ".luucy/types.d.ts",
      "// enabled declarations, generated by luucy cli
// autogenerated. changes will be overwritten

/// <reference no-default-lib="true"/>
/// <reference path="../node_modules/luucy-types/globals/index.d.ts" />
",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`scopes.ts handles adding scope "data" twice 1`] = `
[MockFunction] {
  "calls": [
    [
      ".luucy/types.d.ts",
      "// enabled declarations, generated by luucy cli
// autogenerated. changes will be overwritten

/// <reference no-default-lib="true"/>
/// <reference path="../node_modules/luucy-types/globals/index.d.ts" />
",
    ],
    [
      "package.json",
      "{
	"scopes": [
		"data"
	]
}",
    ],
    [
      ".luucy/types.d.ts",
      "// enabled declarations, generated by luucy cli
// autogenerated. changes will be overwritten

/// <reference no-default-lib="true"/>
/// <reference path="../node_modules/luucy-types/globals/index.d.ts" />

/// <reference path="../node_modules/luucy-types/scopes/data/index.d.ts" />",
    ],
    [
      "package.json",
      "{
	"scopes": [
		"data"
	]
}",
    ],
    [
      ".luucy/types.d.ts",
      "// enabled declarations, generated by luucy cli
// autogenerated. changes will be overwritten

/// <reference no-default-lib="true"/>
/// <reference path="../node_modules/luucy-types/globals/index.d.ts" />

/// <reference path="../node_modules/luucy-types/scopes/data/index.d.ts" />",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": true,
    },
    {
      "type": "return",
      "value": true,
    },
    {
      "type": "return",
      "value": true,
    },
    {
      "type": "return",
      "value": true,
    },
    {
      "type": "return",
      "value": true,
    },
  ],
}
`;
